[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/MapSelection.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.298039, 0.298039, 0.298039, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 473.0
margin_top = 253.0
margin_right = 550.0
margin_bottom = 347.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 77.0
margin_bottom = 14.0
text = "Select Level"
align = 1
valign = 1

[node name="AkinaLevel" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 77.0
margin_bottom = 54.0
text = "Akina"

[node name="ShutokoLevel" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 77.0
margin_bottom = 94.0
text = "Shutoko"

[connection signal="pressed" from="CenterContainer/VBoxContainer/AkinaLevel" to="." method="_on_AkinaLevel_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ShutokoLevel" to="." method="_on_ShutokoLevel_pressed"]
